syntax = "proto3";

package TondbadSwoole;

message ErrorResponse {
    string error_message = 1;
    int32 error_code = 2;
}